# meditly

./: Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
meditly/: __init__.py  cli.py
